# Robot-Controllers-Mujoco

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_install.bat
config/: franka_sim_setup.cpp  franka_sim_setup.hpp
controllers/PID/: PID.cpp  PID.hpp  kinematic_pid.cpp  kinematic_pid.hpp
documents/: PID_dynamics.md  PID_kinematics.md
interfaces/: mj_sim.cpp  mj_sim.hpp  robot_model.cpp  robot_model.hpp
src/: main.cpp
